# pylrctool

./: .pre-commit-config.yaml  README.md  pyproject.toml
pylrctool/: __init__.py  exceptions.py  lrcevent.py  lrcfile.py  regex.py
tests/: lrc_event_test.py  lrc_file_test.py  test.lrc  test2.lrc
